--- a/FoodPlanner/FoodPlanner/App.config
+++ b/FoodPlanner/FoodPlanner/App.config
@@ -1,34 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="FoodPlanner.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
-  <userSettings>
-    <FoodPlanner.Properties.Settings>
-      <setting name="Persons" serializeAs="String">
-        <value>1</value>
-      </setting>
-    </FoodPlanner.Properties.Settings>
-  </userSettings>
+  <connectionStrings>
+    <add name="databaseContext" connectionString="metadata=res://*/database.csdl|res://*/database.ssdl|res://*/database.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=solaronline.me;user id=foodplan;database=foodplan;password=zFFNzDVQntdapQ6L;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
   </entityFramework>
-  <connectionStrings>
-    <!--<add name="FoodContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=Z:\Documents\P3\FoodPlanner-Project\FoodPlanner\FoodPlanner\FoodData.mdf;Initial Catalog=FoodPlanner.Models.FoodContext;MultipleActiveResultSets=True;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="FoodContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\FoodData.mdf;MultipleActiveResultSets=True;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
 </configuration>
