--- a/FoodPlanner/FoodPlanner/App.config
+++ b/FoodPlanner/FoodPlanner/App.config
@@ -1,20 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="databaseContext" connectionString="metadata=res://*/database.csdl|res://*/database.ssdl|res://*/database.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=solaronline.me;user id=foodplan;database=foodplan;password=zFFNzDVQntdapQ6L;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="FoodContext" connectionString="metadata=res://*/FoodDatabase.csdl|res://*/FoodDatabase.ssdl|res://*/FoodDatabase.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=solaronline.me;user id=foodplan;database=foodplan;password=zFFNzDVQntdapQ6L;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+    </providers>
   </entityFramework>
 </configuration>
