--- a/FoodPlanner/FoodPlanner/FoodPlanner.csproj
+++ b/FoodPlanner/FoodPlanner/FoodPlanner.csproj
@@ -82,6 +82,9 @@
     <Compile Include="Foodplan.xaml.cs">
       <DependentUpon>Foodplan.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FoodPlanPage.xaml.cs">
+      <DependentUpon>FoodPlanPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Ingredient.cs">
       <DependentUpon>FoodDatabase.tt</DependentUpon>
     </Compile>
@@ -119,6 +122,10 @@
       <DependentUpon>UserControlButtonSlide.xaml</DependentUpon>
     </Compile>
     <Page Include="Foodplan.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FoodPlanPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
