--- a/FoodPlanner/FoodPlanner/FoodPlanner.csproj
+++ b/FoodPlanner/FoodPlanner/FoodPlanner.csproj
@@ -264,8 +264,10 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\refrigerator_slidebutton_image.png" />
-    <Resource Include="refrigerator_slidebutton_image.png" />
+    <Resource Include="foodplan.jpg" />
+    <Resource Include="Images\foodplan.jpg" />
+    <Resource Include="Images\refigorator.jpg" />
+    <Resource Include="refigorator.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
