--- a/FoodPlanner/FoodPlanner/FoodPlanner.csproj
+++ b/FoodPlanner/FoodPlanner/FoodPlanner.csproj
@@ -257,8 +257,11 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\calender.jpg" />
     <Resource Include="Images\foodplan.jpg" />
+    <Resource Include="Images\recipes2.jpg" />
     <Resource Include="Images\refigorator.jpg" />
+    <Resource Include="Images\settings.jpg" />
     <Resource Include="Images\shoppinglist.jpg" />
   </ItemGroup>
   <ItemGroup>
