--- a/FoodPlanner/FoodPlanner/FoodPlanner.csproj
+++ b/FoodPlanner/FoodPlanner/FoodPlanner.csproj
@@ -267,7 +267,7 @@
     <Resource Include="Images\shoppinglist.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\plus_icon_image.png" />
+    <Resource Include="Images\plusIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
