--- a/FoodPlanner/FoodPlanner/FoodPlanner.csproj
+++ b/FoodPlanner/FoodPlanner/FoodPlanner.csproj
@@ -273,6 +273,9 @@
   <ItemGroup>
     <Resource Include="Images\backArrowIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\completeShoppingListIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
