--- a/FoodPlanner/FoodPlanner/FoodPlanner.csproj
+++ b/FoodPlanner/FoodPlanner/FoodPlanner.csproj
@@ -109,6 +109,9 @@
     </Compile>
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\RecipesViewModel.cs" />
+    <Compile Include="Views\MealPlanPage.xaml.cs">
+      <DependentUpon>MealPlanPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\RecipesPage.xaml.cs">
       <DependentUpon>RecipesPage.xaml</DependentUpon>
     </Compile>
@@ -171,6 +174,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\MealPlanPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\RecipesPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -260,12 +267,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\calender.jpg" />
+    <Resource Include="Images\downArrowIcon.png" />
     <Resource Include="Images\foodplan.jpg" />
+    <Resource Include="Images\forwardArrowIcon.png" />
     <Resource Include="Images\recipes2.jpg" />
     <Resource Include="Images\refigorator.jpg" />
     <Resource Include="Images\searchIcon.png" />
     <Resource Include="Images\settings.jpg" />
     <Resource Include="Images\shoppinglist.jpg" />
+    <Resource Include="Images\upArrowIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\plusIcon.png" />
