--- a/FoodPlanner/FoodPlanner/FoodPlanner.csproj
+++ b/FoodPlanner/FoodPlanner/FoodPlanner.csproj
@@ -268,6 +268,7 @@
   <ItemGroup>
     <Resource Include="Images\downArrowIcon.png" />
     <Resource Include="Images\forwardArrowIcon.png" />
+    <Resource Include="Images\refrigeratorIcon.png" />
     <Resource Include="Images\searchIcon.png" />
     <Resource Include="Images\upArrowIcon.png" />
   </ItemGroup>
@@ -294,9 +295,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Foodplan.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Crate.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
